5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1643_2446.log
== TEST (2019-04-15 09:10:49) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
al=senha%100000

b=al//1000
bl=al%1000

c=bl//1000
cl=bl%1000

d=cl/100
dl=cl%100

e=dl//10
el=dl%10

f=el%//1
fl=el%1

p1=b+d+f
p2=a+c+
r=pl%p2
-- ERROR:
File "XXXX", line 18
    f=el%//1
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:12:28) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1%//1
f1=e1%1

p1=b+d+f
p2=a+c+
r=p1%p2
-- ERROR:
File "XXXX", line 18
    f=e1%//1
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:12:34) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1%//1
f1=e1%1

p1=b+d+f
p2=a+c+
r=p1%p2
-- ERROR:
File "XXXX", line 18
    f=e1%//1
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:13:02) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1%//1
f1=e1%1

p1=b+d+f
p2=a+c+
r=p1%p2
-- ERROR:
File "XXXX", line 18
    f=e1%//1
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:13:28) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+
r=p1%p2
-- ERROR:
File "XXXX", line 22
    p2=a+c+
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:13:49) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
-- ERROR:
File "XXXX", line 22
    p2=a+c+
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:14:07) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
-- EXECUTION TIME:
0.190689
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:

-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:

-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:14:12) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
-- ERROR:
File "XXXX", line 22
    p2=a+c+
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:18:36) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:18:54) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- EXECUTION TIME:
0.197889
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:20:31) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:21:02) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- EXECUTION TIME:
0.141844
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:41:01) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:41:14) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:41:48) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:42:08) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:40:37) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- EXECUTION TIME:
0.236117
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:38) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:46) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:55) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:07) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:08) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:19) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:41:19) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//1000
b1=a1%1000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- EXECUTION TIME:
0.149831
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:57:59) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:58:18) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1/100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:01:33) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2

if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:01:43) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2

if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- EXECUTION TIME:
0.21849
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:01:45) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2

if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:01:58) 
-- CODE:
senha=int(input("digite a senha de seis digitos"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2

if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- EXECUTION TIME:
0.124198
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:03:50) 
-- CODE:
senha=int(input("digite a senha de seis digitos:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2

if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:03:59) 
-- CODE:
senha=int(input("digite a senha de seis digitos:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2

if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- EXECUTION TIME:
0.176812
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:04:57) 
-- CODE:
senha=int(input("digite a senha de seis digitos:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:05:09) 
-- CODE:
senha=int(input("digite a senha de seis digitos:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:05:25) 
-- CODE:
senha=int(input("digite a senha de seis digitos:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- EXECUTION TIME:
0.164953
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:15:39) 
-- CODE:
senha=int(input("digite a senha de seis digitos:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p2%p1
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:15:47) 
-- CODE:
senha=int(input("digite a senha de seis digitos:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p2%p1
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
senha ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:16:12) 
-- CODE:
senha=int(input("digite a senha de seis digitos:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p2%p1
if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- EXECUTION TIME:
0.166862
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha ivalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:17:25) 
-- CODE:
senha=int(input("digite a senha de seis digitos:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2

if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:17:55) 
-- CODE:
senha=int(input())

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2

if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:18:08) 
-- CODE:
senha=int(input())

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2

if(r==0):
	print("acesso liberado")
else:
	print("senha ivalida")
-- EXECUTION TIME:
0.141918
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha ivalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:37:21) 
-- CODE:
senha=int(input("digite a senha de 6:"))

a=senha//100000
a1=senha%100000

b=al//10000
b1=al%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1&100

e=d1//10
el=d1%10

f=el//1
f1=el&1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("acesso invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    b=al//10000
NameError: name 'al' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:40:02) 
-- CODE:
senha=int(input("digite a senha de 6:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("acesso invalido")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:40:10) 
-- CODE:
senha=int(input("digite a senha de 6:"))

a=senha//100000
a1=senha%100000

b=a1//10000
b1=a1%10000

c=b1//1000
c1=b1%1000

d=c1//100
d1=c1%100

e=d1//10
e1=d1%10

f=e1//1
f1=e1%1

p1=b+d+f
p2=a+c+e
r=p1%p2
if(r==0):
	print("acesso liberado")
else:
	print("acesso invalido")
-- EXECUTION TIME:
0.152823
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso invalido
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
